changed datasets to load binary classification data

--- a/toxic_comment/notebooks/00_baseline.ipynb
+++ b/toxic_comment/notebooks/00_baseline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "hidden": true
    },
@@ -103,7 +103,7 @@
     "        self.identifier = compute_df_sha(self.train_df)\n",
     "\n",
     "class ProcessedDataset:\n",
-    "    toxicity_subtypes = ['severe_toxicity', 'obscene', 'threat', 'insult', 'identity_attack', 'sexual_explicit']\n",
+    "    toxicity_subtypes = [\"toxic\",\"severe_toxic\",\"obscene\",\"threat\",\"insult\",\"identity_hate\"]\n",
     "    identity_attributes = [\n",
     "        'male', 'female', 'transgender', 'other_gender',\n",
     "        'heterosexual', 'homosexual_gay_or_lesbian', 'bisexual', 'other_sexual_orientation',\n",
@@ -112,7 +112,7 @@
     "        'physical_disability', 'intellectual_or_learning_disability', 'psychiatric_or_mental_illness',\n",
     "        'other_disability'\n",
     "    ]\n",
-    "    _binarize_columns = ['target'] + toxicity_subtypes\n",
+    "    _binarize_columns = toxicity_subtypes\n",
     "    binary_columns = [f'b_{name}' for name in _binarize_columns]\n",
     "    \n",
     "    def __init__(self, raw_dataset: RawDataset, overwrite: bool = False) -> None:\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "hidden": true
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
     "        X = torch.LongTensor(X)\n",
     "        if self.Y_cols is not None:\n",
     "            Y = self._column_selector(sample, self.Y_cols)\n",
-    "            Y = torch.Tensor([Y])\n",
+    "            Y = torch.Tensor(Y)\n",
     "            return X, Y\n",
     "        else:\n",
     "            return (X, )\n",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "hidden": true
    },
@@ -429,7 +429,7 @@
     "            model_params['d_model']\n",
     "        )\n",
     "        self.transformer_pool_layer = nn.AdaptiveMaxPool1d(1)\n",
-    "        self.logit_layer = nn.Linear(model_params['d_model'], 1)\n",
+    "        self.logit_layer = nn.Linear(model_params['d_model'], model_params['n_targets'])\n",
     "        self.conv_act = nn.Tanh()\n",
     "        \n",
     "    def forward(self, token_ids) -> torch.Tensor:\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "hidden": true
    },
@@ -508,15 +508,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "#### Base classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def random_string(length: int) -> str:\n",
@@ -674,15 +678,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "#### Useful classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class Recorder(Callback):\n",
@@ -870,15 +878,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Training callback routine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class Fitter:\n",
@@ -983,14 +995,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading processed dataset from /home/myen/Learn/Kaggle/toxic_comment/data/b99b7e3dc5efe6cd58de07884a1829563aa094f60141b25554fff4bef39a23c5.pklb\n"
+      "Loading processed dataset from C:\\Users\\mikea\\Learn\\Kaggle\\toxic_comment\\data\\aa5eddebf471cd56c481cecb23cd016a5f9c2831e71b5690479b650c80788147.pklb\n"
      ]
     }
    ],
@@ -1002,20 +1014,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda:1')\n",
+    "    device = torch.device('cuda:0')\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
     "\n",
-    "params = {'batch_size': 128, 'num_workers': 3, 'drop_last': False, 'collate_fn': collate}\n",
+    "print(f'Using device: {device}')\n",
+    "    \n",
+    "params = {'batch_size': 64, 'num_workers': 0, 'drop_last': False, 'collate_fn': collate}\n",
     "\n",
-    "transform = Transformer('comment_words', 'b_target')\n",
+    "transform = Transformer('comment_words', ['b_toxic', 'b_severe_toxic'])\n",
     "test_transform = Transformer('comment_words', None)\n",
     "train_ds = CommentDataset(trainable_dataset.train_df, transform)\n",
     "val_ds = CommentDataset(trainable_dataset.val_df, transform)\n",
@@ -1028,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,6 +1060,7 @@
     "    'padding_idx': transform.vocab[transform.vocab.PAD],\n",
     "    'nhead': 8,\n",
     "    'd_model': 256,\n",
+    "    'n_targets': len(transform.Y_cols),\n",
     "    'width': 3\n",
     "}\n",
     "model = SimpleModel(model_params).to(device)\n",
@@ -1046,12 +1069,12 @@
     "data_bunch = DataLoaderBunch(train_dl, val_dl, test_dl)\n",
     "\n",
     "model_learner = Learner(model, optimizer, loss, data_bunch)\n",
-    "fitter = Fitter(model_learner, testing=True)"
+    "fitter = Fitter(model_learner, testing=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1060,55 +1083,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning run li6flrl41kka\n"
+      "Beginning run 9mh2czfbskzh\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "079192ae2bbf49c6aa075cee59264b48",
+       "model_id": "af6e4df1410242a0992a317bde723d47",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1624386), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=143613), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32a88ae8596c47649ba80605c4baa2b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=180488), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Epoch 1 (3 sec): loss = 0.32757 acc = 93.59% val loss = 0.31289 val_acc = 90.70%\n"
-     ]
     }
    ],
    "source": [
-    "fitter.fit(1)\n"
+    "fitter.fit(20)\n"
    ]
   },
   {
