WIP, data generaor

--- a/toxic_comment/notebooks/00_baseline.ipynb
+++ b/toxic_comment/notebooks/00_baseline.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
+    "#export\n",
     "import concurrent.futures\n",
     "from functools import partial\n",
     "import hashlib\n",
@@ -32,10 +32,7 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import torch.optim as optim\n"
    ]
   },
   {
@@ -44,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "nlp = English()\n",
     "tokenizer = Tokenizer(nlp.vocab)"
    ]
@@ -192,6 +190,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export vocab.py\n",
+    "from typing import List, Union\n",
+    "\n",
+    "\n",
     "class Vocabulary:\n",
     "    PAD = \"<PAD>\"\n",
     "    BOS = \"<BOS>\"\n",
